Checkstyle fixes, clean up